test/fail/string_field_invalid.zn
# ERRORS: 1
# Invalid field access on string

func main() {
    let s = "hello"
    let x = s.count
    0
}
